--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -7,8 +7,8 @@ USER VISIBLE CHANGES BETWEEN TAO-4.0.3 and TAO-4.0.4
       builtin backend doesn't enforce the bound
     . Support for using maps in unions, sequences, and arrays
     . Fix memory leaks caused by maps
-  . Support for deprecated CPP_LOCATION and TAO_IDL_DEFAULT_CPP_FLAGS environment
-    variables has been removed
+  . Removed support for deprecated CPP_LOCATION and TAO_IDL_DEFAULT_CPP_FLAGS
+    environment variables
 
 USER VISIBLE CHANGES BETWEEN TAO-4.0.2 and TAO-4.0.3
 ====================================================
