--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -7,8 +7,12 @@ USER VISIBLE CHANGES BETWEEN TAO-4.0.3 and TAO-4.0.4
       builtin backend doesn't enforce the bound
     . Support for using maps in unions, sequences, and arrays
     . Fix memory leaks caused by maps
+    . Fixed bug in AST_Map::key_type_annotations()
+    . Added code generation for maps as operation parameters
   . Removed support for deprecated CPP_LOCATION and TAO_IDL_DEFAULT_CPP_FLAGS
     environment variables
+
+. Fixed compilation with Visual C++ 2022 in Standard C++ 20 mode
 
 USER VISIBLE CHANGES BETWEEN TAO-4.0.2 and TAO-4.0.3
 ====================================================
