--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -9,6 +9,10 @@ USER VISIBLE CHANGES BETWEEN TAO-2.5.21 and TAO-2.5.22
       builtin backend doesn't enforce the bound
     . Support for using maps in unions, sequences, and arrays
     . Fix tao_idl memory leaks caused by maps
+    . Fixed bug in AST_Map::key_type_annotations()
+    . Added code generation for maps as operation parameters
+
+. Fixed compilation with Visual C++ 2022 in Standard C++ 20 mode
 
 USER VISIBLE CHANGES BETWEEN TAO-2.5.20 and TAO-2.5.21
 ======================================================
