Make ACE 8.0.4 and TAO 4.0.4 public
    * ACE/NEWS:
    * ACE/bin/copy-local-script.sh:
    * ACE/docs/Download.html:
    * ACE/etc/index.html:
    * TAO/NEWS:

--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-8.0.4 and ACE-8.0.5
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.3 and ACE-8.0.4
 ====================================================
 
