--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN TAO-4.0.4 and TAO-4.0.5
+====================================================
+
 USER VISIBLE CHANGES BETWEEN TAO-4.0.3 and TAO-4.0.4
 ====================================================
 
