--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN TAO-2.5.22 and TAO-2.5.23
+======================================================
+
 USER VISIBLE CHANGES BETWEEN TAO-2.5.21 and TAO-2.5.22
 ======================================================
 
