--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -3,6 +3,8 @@ USER VISIBLE CHANGES BETWEEN ACE-6.5.22 and ACE-6.5.23
 
 . Backported TTY_IO enhancements from ACE-7.x
 
+. Fixed building ACE for Android with `uses_wchar=1`
+
 USER VISIBLE CHANGES BETWEEN ACE-6.5.21 and ACE-6.5.22
 ======================================================
 
