Reworked CDR ValueType and DynValue indirections, lot of ugly casting and also different order of arguments, something pretty messy here
    * ACE/bin/fuzz.pl:
    * ACE/tests/Bug_3332_Regression_Test.cpp:
    * TAO/docs/Options.html:
    * TAO/orbsvcs/orbsvcs/IFRService/StructDef_i.cpp:
    * TAO/orbsvcs/orbsvcs/IFRService/UnionDef_i.cpp:
    * TAO/tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
    * TAO/tao/CDR.h:
    * TAO/tao/CDR.inl:
    * TAO/tao/DynamicAny/DynAnyFactory.cpp:
    * TAO/tao/DynamicAny/DynAnyFactory.h:
    * TAO/tao/DynamicAny/DynValue_i.cpp:
    * TAO/tao/Valuetype/ValueBase.cpp:
    * TAO/tao/Valuetype/ValueBase.h:
    * TAO/tests/Bug_4097_Regression/README:

--- a/TAO/tests/Bug_4097_Regression/README
+++ b/TAO/tests/Bug_4097_Regression/README
@@ -21,7 +21,7 @@ Currently TAO (and a few other orbs including JacOrb and eOrb'C' eORB'C++') do
 not handle the typecode generation correctly for this. Only one of the above
 cases for the mlu_char member are dealt with in the typecode information, even
 though the generated (de)marshaling code correctly handles all case labels.
-This means that such unions sent inside anys are impossiable to decode at the
+This means that such unions sent inside anys are impossible to decode at the
 receiving end if the missing case label is being used for the union it holds.
 
 When using the typecode interface functions for the above it incorrectly gives:
