Fixed various typos
    * ACE/ASNMP/asnmp/transaction.cpp:
    * ACE/protocols/ace/RMCast/Link.cpp:
    * TAO/docs/Options.html:
    * TAO/orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.h:
    * TAO/orbsvcs/tests/Miop/McastFragmentation/server.cpp:
    * TAO/orbsvcs/tests/Miop/McastPreferredInterfaces/run_test_ipv6.pl:
    * TAO/tao/DynamicAny/DynCommon.h:
    * TAO/tao/DynamicAny/DynValue_i.cpp:
    * TAO/tests/MT_NoUpcall_Client_Leader/README:
    * TAO/tests/TransportCurrent/IIOP/IIOP_Server_Request_Interceptor.h:
    * TAO/utils/nslist/nsdel.cpp:

--- a/TAO/tests/MT_NoUpcall_Client_Leader/README
+++ b/TAO/tests/MT_NoUpcall_Client_Leader/README
@@ -1,17 +1,17 @@
 
 
-The test simulates a case when an incomming requests is being detected while a
+The test simulates a case when an incoming requests is being detected while a
 client-leader thread is waiting in the reactor event loop for its own reply.
 
 The server uses MT_NOUPCALL client connection handling strategy. The defect was
-in the fact that while the above described incomming request was correctly not
+in the fact that while the above described incoming request was correctly not
 being handled, the corresponding transport handle remained suspended. This
 caused the reactor to exclude that handle from the read mask and it never gave
 other followers a chance to read from that handle. Eventually, these requests
 remained "ignored"
 
 The resolution is to resume the handle *and* notify the reactor when an
-incomming requests is being detected, while a client-leader thread is waiting
+incoming requests is being detected, while a client-leader thread is waiting
 in the reactor event loop for its own reply. Thus, if any follower threads are
 available, they can pick it up and process it eventually.
 
