--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -3,6 +3,10 @@ USER VISIBLE CHANGES BETWEEN ACE-8.0.4 and ACE-8.0.5
 
 . Fixed building ACE for Android with `uses_wchar=1`
 
+. Add support for parallel make using Embarcadero bcc64x compiler
+
+. Fixed compile errors when C++23 is enabled
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.3 and ACE-8.0.4
 ====================================================
 
