Prepare for next release
    * ACE/NEWS:
    * ACE/bin/diff-builds-and-group-fixed-tests-only.sh:
    * ACE/docs/Download.html:
    * ACE/etc/index.html:
    * TAO/NEWS:

--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN TAO-4.0.5 and TAO-4.0.6
+====================================================
+
 USER VISIBLE CHANGES BETWEEN TAO-4.0.4 and TAO-4.0.5
 ====================================================
 
