--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -7,6 +7,8 @@ USER VISIBLE CHANGES BETWEEN ACE-6.5.22 and ACE-6.5.23
 
 . Updated thread name support to work with older Windows versions
 
+. Support floating-point-based `std::chrono::duration` in `ACE_Time_Value`
+
 USER VISIBLE CHANGES BETWEEN ACE-6.5.21 and ACE-6.5.22
 ======================================================
 
