Time_Value & Floating-point std::chrono::duration
`ACE_Time_Value` currently doesn't accept a `std::chrono::duration` with
`Rep` that's a floating point type because it's using the modulus
operator to separate the microseconds (`duration % seconds(1)`) and
trying to use modulus with floating points causes a compile error.

This changes it to use subtraction from the whole number of seconds
(`duration - sec`) and adds a test for it.

Also:
- Simplify the `-=` and `+=` ops of `ACE_Time_Value`
- Rewrite some of the testing in `Chrono_Test.cpp`.

--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -1,6 +1,8 @@
 USER VISIBLE CHANGES BETWEEN ACE-8.0.5 and ACE-8.0.6
 ====================================================
 
+. Support floating-point-based `std::chrono::duration` in `ACE_Time_Value`
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.4 and ACE-8.0.5
 ====================================================
 
