--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -1,6 +1,11 @@
 USER VISIBLE CHANGES BETWEEN TAO-2.5.22 and TAO-2.5.23
 ======================================================
 
+. Updated tao_idl code generation for IDL maps
+
+. Threads created by TAO_Thread_Per_Connection_Handler now have shorter
+  names because Linux limits thread names to 15 characters.
+
 USER VISIBLE CHANGES BETWEEN TAO-2.5.21 and TAO-2.5.22
 ======================================================
 
