--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.5.23 and ACE-6.5.24
+======================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.5.22 and ACE-6.5.23
 ======================================================
 
