Document changes for TAO-4.0.6
Added a section for changes in TAO-4.0.6 with no updates.

--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -1,6 +1,8 @@
 USER VISIBLE CHANGES BETWEEN TAO-4.0.5 and TAO-4.0.6
 ====================================================
 
+. None
+
 USER VISIBLE CHANGES BETWEEN TAO-4.0.4 and TAO-4.0.5
 ====================================================
 
